apps/shuttr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shuttr
  namespace: default
  labels:
    app: shuttr
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: shuttr
