apps/shuttr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: shuttr
  namespace: default
spec:
  parentRefs:
    - kind: Gateway
      namespace: gateway-infra
      name: gateway
  hostnames:
    - photos.ch.tudelft.nl
  rules:
    - backendRefs:
        - name: shuttr
          port: 80
