apps/shuttr/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: shuttr-wisvch-redirect
  namespace: default
  labels:
    app: shuttr
spec:
  parentRefs:
    - kind: Gateway
      namespace: gateway-infra
      name: gateway
  hostnames:
    - photos.wisv.ch
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: photos.ch.tudelft.nl
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
            statusCode: 301
